--- a/project/I2C.X/nbproject/Makefile-genesis.properties
+++ b/project/I2C.X/nbproject/Makefile-genesis.properties
@@ -1,8 +1,8 @@
 #
-#Fri Jan 18 20:46:43 PST 2013
-default.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
-default.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=772a51e27305af7153d27bfdfb4067f4
+#Tue Jan 22 12:01:28 PST 2013
+default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7144f3efb723ea297d0b9c49202c96fa
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v1.20\\bin
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=d812b2c39265b72417b5515e5943bf80
-default.languagetoolchain.version=2.02
-host.platform=mac
+default.languagetoolchain.version=1.20
+host.platform=windows
 conf.ids=default
